tests/testdata/jsr/bad_manifest_checksum/main.ts
import { add } from "jsr:@denotest/bad-manifest-checksum@1.0.0";
console.log(add);
